--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numba==0.49.1
-numpy==1.18.5
-pandas==1.0.4
-scikit-learn==0.23.1
-scipy==1.4.1
+numba>=0.49.1
+numpy>=1.18.5
+pandas>=1.0.4
+scikit-learn>=0.23.1
+scipy>=1.4.1
